Add gateway functionality
